--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ShoppingList</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
 
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/shopping-list.css">
+
+    <script src="https://apis.google.com/js/client:platform.js" async defer></script>
   </head>
   <body>
     {{content-for 'body'}}
