Fixes item model and adds icons for ios and android homescreen bookmark

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
 
+    <link rel="apple-touch-icon" sizes="32x32" href="basket-32.png" />
+    <link rel="apple-touch-icon" sizes="64x64" href="basket-64.png" />
+    <link rel="apple-touch-icon" sizes="128x128" href="basket-128.png" />
+
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
